--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@heroicons/react": "^1.0.6",
 		"alchemy-sdk": "^2.2.0",
+		"antd": "^5.0.4",
 		"autoprefixer": "^10.4.7",
 		"connectkit": "^0.0.2",
 		"ethers": "^5.7.2",
