--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
 		"@heroicons/react": "^1.0.6",
+		"@material-ui/core": "^4.12.4",
+		"@material-ui/icons": "^4.11.3",
+		"@mui/icons-material": "^5.10.16",
+		"@mui/material": "^5.10.17",
 		"alchemy-sdk": "^2.2.0",
 		"antd": "^5.0.4",
 		"autoprefixer": "^10.4.7",
@@ -20,6 +26,7 @@
 		"postcss": "^8.4.14",
 		"react": "18.1.0",
 		"react-dom": "18.1.0",
+		"react-router-dom": "^6.4.5",
 		"tailwindcss": "^3.0.24",
 		"wagmi": "^0.7.9"
 	},
