--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
 		"alchemy-sdk": "^2.2.0",
 		"antd": "^5.0.4",
 		"autoprefixer": "^10.4.7",
+		"chart.js": "^4.0.1",
 		"connectkit": "^0.0.2",
 		"ethers": "^5.7.2",
 		"next": "12.1.6",
 		"next-themes": "^0.2.0",
 		"postcss": "^8.4.14",
 		"react": "18.1.0",
+		"react-chartjs-2": "^5.0.1",
 		"react-dom": "18.1.0",
 		"react-router-dom": "^6.4.5",
 		"tailwindcss": "^3.0.24",
